# Demo_Project

./: .gitignore  LICENSE  README.md
backend/: main.py  pyproject.toml
backend/api/api_v1/: __init__.py
backend/core/: __init__.py  config.py
backend/core/gunicorn/: __init__.py  app_options.py  application.py  logger.py
backend/core/models/: __init__.py  db_helper.py
backend/utils/: __init__.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.scss  layout.tsx  page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/cottages/: page.tsx
frontend/src/components/: header.tsx
frontend/src/components/header_dir/: Header.module.scss
frontend/src/components/travel_forms/: travel_form.tsx  travel_section.module.scss
frontend/src/config/: next.config.ts
